# wow_plus

./: .gitignore  config.yaml  gui.py  pyproject.toml  yolo_class_names.txt
.history/: gui_20250725195352.py  gui_20250725202623.py  pyproject_20250725201352.toml  yolo_pipeline_20250725200654.py  yolo_pipeline_20250725200926.py
docs/: README.md  《魔兽世界》技能自动化软件 - 图像识别与按键绑定方案 (修订版).md  《魔兽世界》技能自动化软件 - 技能释放策略 (修订版).md  《魔兽世界》技能自动化软件 - 架构设计.md  使用说明.md  系统架构设计文档.md
scripts/: train_yolo.py  yolo_pipeline.py
src/: app_controller.py  automation_engine.py  keybinder.py  yolo_detector.py
src/engine/: automation_engine.py  automation_loop.py  mode_manager.py  strategy_manager.py
src/implementations/: pynput_sender.py
src/interfaces/: keystroke_sender.py
src/utils/: config_manager.py
strategies/: destruction_warlock.yaml  frost_dk.yaml  frostfire_mage.yaml  test_strategy.yaml
tests/: test_mode_manager.py  test_strategy_manager.py
yolo_dataset/: dataset.yaml
