[project]
name = "wow-automation-assistant"
version = "1.0.0"
description = "A GUI-based automation tool for World of Warcraft using image recognition."
requires-python = "==3.9.23"

dependencies = [
    "PyYAML",
    "pynput",
    "opencv-python",
    "Pillow",
    "ultralytics",
    "urllib3<2.0",
    "PySide6",
    "pyqt5-qt5==5.15.2",
    "labelimg>=1.8.6",
]
